force-app/main/default/objects/TM_Survey__c/TM_Survey__c.object-meta.xml
<CustomObject>
    <label>Survey</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>TM Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>