force-app/main/default/objects/TM_Survey__c/fields/Clinician_Administered__c.field-meta.xml
<CustomField>
    <fullName>Clinician_Administered__c</fullName>
    <label>Clinician Administered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Surveys</valueSetName>
    </valueSet>
</CustomField>