force-app/main/default/objects/TM_Survey__c/fields/Self_Report__c.field-meta.xml
<CustomField>
    <fullName>Self_Report__c</fullName>
    <label>Self Report</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Surveys</valueSetName>
    </valueSet>
</CustomField>