force-app/main/default/objects/TM_Survey__c/fields/sequence__c.field-meta.xml
<CustomField>
    <fullName>sequence__c</fullName>
    <label>sequence</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>