force-app/main/default/objects/TM_Survey__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <referenceTo>Study_Participant__c</referenceTo>
    <relationshipName>TM_Survey</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>