force-app/main/default/objects/TM_Survey__c/fields/Survey_Focus__c.field-meta.xml
<CustomField>
    <fullName>Survey_Focus__c</fullName>
    <label>Survey Focus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>