force-app/main/default/objects/TM_Survey__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Survey</fullName>
            </value>
            <value>
                <fullName>Post-Survey 1</fullName>
            </value>
            <value>
                <fullName>Post-Survey 2</fullName>
            </value>
            <value>
                <fullName>Post-Survey 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>